Fix: Tooltip text alignment

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2086,6 +2086,9 @@ textarea::-webkit-scrollbar-thumb {
   padding-left: 20px;
   padding-right: 20px;
 }
+.__react_component_tooltip .wrapper .display-flex{
+  justify-content: end;
+}
 
 .__react_component_tooltip p {
   font-size: 15px;
